@@ -42,8 +42,8 @@ Depends: ${python:Depends},
          gir1.2-glib-2.0 (>= 1.31.0)
 Provides: ${python:Provides}
 Suggests: python-gi-cairo
-Breaks: python-gobject (<< 1:2.28)
-Replaces: python-gobject (<< 1:2.28)
+Breaks: python-gobject (<< 3.0.2-4)
+Replaces: python-gobject (<< 3.0.2-4)
 Description: Python 2.x bindings for gobject-introspection libraries
  GObject is an abstraction layer that allows programming with an object
  paradigm that is compatible with many languages. It is a part of Glib,
@@ -97,8 +97,8 @@ Depends: ${python:Depends},
          ${shlibs:Depends},
          ${misc:Depends},
          python-gi (= ${binary:Version})
-Breaks: python-gobject-dbg (<< 1:2.28)
-Replaces: python-gobject-dbg (<< 1:2.28)
+Breaks: python-gobject-dbg (<< 3.0.2-4)
+Replaces: python-gobject-dbg (<< 3.0.2-4)
 Description: Python bindings for the GObject library (debug extension)
  GObject is an abstraction layer that allows programming with an object
  paradigm that is compatible with many languages. It is a part of Glib,
@@ -139,8 +139,8 @@ Depends: ${shlibs:Depends},
          python-gobject (<= ${source:Version}.1~),
          libglib2.0-dev (>= 2.24.0),
          libffi-dev (>= 3.0.5)
-Breaks: python-gobject-dev (<< 1:2.28)
-Replaces: python-gobject-dev (<< 1:2.28)
+Breaks: python-gobject-dev (<< 3.0.2-4)
+Replaces: python-gobject-dev (<< 3.0.2-4)
 Description: development headers for GObject Python bindings
  GObject is an abstraction layer that allows programming with an object
  paradigm that is compatible with many languages. It is a part of Glib,
@@ -148,3 +148,25 @@ Description: development headers for GObject Python bindings
  .
  This package contains the development headers needed to build C extensions
  which use pygobject.
+
+Package: python-gobject
+Architecture: all
+Depends: ${misc:Depends},
+         python-gi (>= ${source:Version}),
+         python-gobject-2
+Description: Python 2.x bindings for GObject - transitional package 
+ This package will bring the two versions of GObject Python modules: the 
+ deprecated gobject module, and the new gobject-introspection system. It 
+ is here for upgrade purposes only. You can remove it safely when 
+ nothing else depends on it.
+
+Package: python-gobject-dev
+Architecture: all
+Depends: ${misc:Depends},
+         python-gi-dev (= ${source:Version}),
+         python-gobject-2-dev
+Description: Python 2.x development headers for GObject - transitional package 
+ This package will bring development headers for the two versions of 
+ GObject Python modules: the deprecated gobject module, and the new 
+ gobject-introspection system. It is here for upgrade purposes only. You 
+ can remove it safely when nothing else depends on it. 
